Fixed test code; Fixed echo_sleep and echo_exec on nginx

--- a/dash.js/samples/cmsd-dash/index.html
+++ b/dash.js/samples/cmsd-dash/index.html
@@ -21,9 +21,9 @@
     
         function init() {
             var video,
-                // url = "http://localhost:8080/cmcd-njs/bufferBasedRateControl/media/vod/bbb_30fps_akamai/bbb_30fps.mpd",    // w/ bufferBasedRateControl
-                // url = "http://localhost:8080/media/vod/bbb_30fps_akamai/bbb_30fps.mpd",    // w/o bufferBasedRateControl
-                url = "https://dash.akamaized.net/akamai/bbb_30fps/bbb_30fps.mpd",    // dash.js default
+                url = "http://localhost:8080/cmsd-njs/bufferBasedResponseDelay/media/vod/bbb_30fps_akamai/bbb_30fps.mpd",    // w/ bufferBasedResponseDelay
+                // url = "http://localhost:8080/media/vod/bbb_30fps_akamai/bbb_30fps.mpd",  // w/o bufferBasedResponseDelay
+                // url = "https://dash.akamaized.net/akamai/bbb_30fps/bbb_30fps.mpd",       // dash.js default
                 version,
                 httpParams=getQueryParams(),
                 minBuffer=4,
