Update cmsdServer w metric logging and added cmsd header

--- a/dash.js/samples/cmsd-dash/index.html
+++ b/dash.js/samples/cmsd-dash/index.html
@@ -293,6 +293,7 @@
 
                 // console.log('');
                 console.log('>>> FRAGMENT_LOADING_COMPLETED: ' + segmentKey);
+                console.log(e);
                 // console.log(history);
                 // console.log(e.request);
 
